force-app/main/default/objects/RemittanceItem__c/RemittanceItem__c.object-meta.xml
<CustomObject>
    <description>[a0H][RemittanceItem__c] Itens da Remessa.</description>
    <label>Item da remessa</label>
    <nameField>
        <label>Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens da remessa</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>