force-app/main/default/objects/RemittanceItem__c/fields/CenterTxt__c.field-meta.xml
<CustomField>
    <fullName>CenterTxt__c</fullName>
    <label>Centro</label>
    <length>4</length>
    <type>Text</type>
</CustomField>