force-app/main/default/objects/RemittanceItem__c/fields/OrderItemLkp__c.field-meta.xml
<CustomField>
    <fullName>OrderItemLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item da ordem</label>
    <referenceTo>OrderItem__c</referenceTo>
    <relationshipLabel>Itens da remessa</relationshipLabel>
    <relationshipName>Itens_da_remessa</relationshipName>
    <type>Lookup</type>
</CustomField>