force-app/main/default/objects/RemittanceItem__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <formula>ProductLkp__r.ProductCodeTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do produto</label>
    <type>Text</type>
</CustomField>