force-app/main/default/objects/RemittanceItem__c/fields/ProductLkp__c.field-meta.xml
<CustomField>
    <fullName>ProductLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens da remessa</relationshipLabel>
    <relationshipName>Itens_da_remessa</relationshipName>
    <type>Lookup</type>
</CustomField>