force-app/main/default/objects/RemittanceItem__c/fields/RemittanceMdt__c.field-meta.xml
<CustomField>
    <fullName>RemittanceMdt__c</fullName>
    <label>Remessa</label>
    <referenceTo>Remittance__c</referenceTo>
    <relationshipLabel>Itens da remessa</relationshipLabel>
    <relationshipName>Itens_da_remessa</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>