force-app/main/default/objects/RemittanceItem__c/fields/SuppliedQuantityNmb__c.field-meta.xml
<CustomField>
    <fullName>SuppliedQuantityNmb__c</fullName>
    <label>Quantidade</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>